--- a/public/views/contratos.hbs
+++ b/public/views/contratos.hbs
@@ -15,7 +15,7 @@
 <body>
     <nav  class="navbar navbar-expand-lg navbar-light p-3"  id="menu">
         <div class="container">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="index.hbs">
               <span class="fs-5 text-success fw-bold">Burdeo</span>
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,7 +37,7 @@
                 <a class="nav-link" href="empaquetado">Empaquetado</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contratos">Contratos</a>
+                <a class="nav-link" href="contratos" style="color:#198754">Contratos</a>
               </li>
             </ul>
             <form class="d-flex">
@@ -53,11 +53,11 @@
       <div class="table-title">
         <div class="row">
           <div class="col-sm-6">
-            <h2>Lista de Clientes</h2>
+            <h2>Lista de Contratos</h2>
           </div>
           <div class="col-sm-6">
-            <a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Agregar Cliente</span></a>
-            <a href="#deleteEmployeeModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Eliminar Cliente</span></a>						
+            <a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Agregar Contrato</span></a>
+            <a href="#deleteEmployeeModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Eliminar Contrato</span></a>						
           </div>
         </div>
       </div>
