--- a/public/views/index.hbs
+++ b/public/views/index.hbs
@@ -26,13 +26,19 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
+                <a class="nav-link" aria-current="page" href="main">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="productos.html">Productos</a>
+                <a class="nav-link" href="proveedores">Proveedores</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contactanos</a>
+                <a class="nav-link" href="clientes">Clientes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="empaquetado">Empaquetado</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contratos">Contratos</a>
               </li>
             </ul>
             <form class="d-flex">
