--- a/public/views/index.hbs
+++ b/public/views/index.hbs
@@ -40,6 +40,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="contratos">Contratos</a>
               </li>
+               <li class="nav-item">
+                <a class="nav-link" href="productos">Productos</a>
+              </li>
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="email" placeholder="Escribe..." aria-label="Escribe...">
@@ -98,7 +101,7 @@
         <div class="card-body">
           <h5 class="card-title">Café Antioquia 250gr.</h5>
           <p class="card-text">Café Balanceado con notas dulces, acidez y cuerpo/medio, aroma herbal ligeramente afrutado.</p>
-          <a href="productos.html" class="btn btn-success">Ver productos</a>
+          <a href="productos" class="btn btn-success">Ver productos</a>
         </div>
         <div class="card-footer">
           <small class="text-muted">Última vista hace 3 minutos</small>
@@ -111,7 +114,7 @@
         <div class="card-body">
           <h5 class="card-title">Café Sierra Nevada 250gr.</h5>
           <p class="card-text">Café con notas a chocolate, nuez, caramelo y almibar, acidez y cuerpo medios.</p>
-          <a href="productos.html" class="btn btn-success">Ver productos</a>
+          <a href="productos" class="btn btn-success">Ver productos</a>
         </div>
         <div class="card-footer">
           <small class="text-muted">Última vista hace 15 minutos</small>
@@ -124,7 +127,7 @@
         <div class="card-body">
           <h5 class="card-title">Café Nariño 250gr.</h5>
           <p class="card-text">Café con acidez y cuerpo/alto, de aroma muy pronunciado a flores y sabores a nuez.</p>
-          <a href="productos.html" class="btn btn-success">Ver productos</a>
+          <a href="productos" class="btn btn-success">Ver productos</a>
         </div>
         <div class="card-footer">
           <small class="text-muted">Última vista hace 17 minutos</small>
@@ -161,7 +164,7 @@
                         <p>Sabor de casa</p>
                     </div>
                     <div>
-                      <a href="contacto.html" class="btn btn-success">Contactanos</a>
+                      <a href="contactos" class="btn btn-success">Contactanos</a>
                     </div>
               </section>
 
