--- a/public/views/proveedores.hbs
+++ b/public/views/proveedores.hbs
@@ -14,7 +14,7 @@
 <body>
     <nav  class="navbar navbar-expand-lg navbar-light p-3"  id="menu">
         <div class="container">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="main">
               <span class="fs-5 text-success fw-bold">Burdeo</span>
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,13 +36,12 @@
                 <a class="nav-link" href="empaquetado">Empaquetado</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="productos">Productos</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="contratos">Contratos</a>
               </li>
             </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="email" placeholder="Escribe..." aria-label="Escribe...">
-              <button class="btn btn-success btn-success-outline-success" type="button">Buscar</button>
-            </form>
           </div>
 
         </div>
